feat: added apply to all and variable removal logical

--- a/frontend/src/container/NewDashboard/DashboardSettings/DashboardSettings.styles.scss
+++ b/frontend/src/container/NewDashboard/DashboardSettings/DashboardSettings.styles.scss
@@ -70,6 +70,17 @@
 				gap: 3px;
 				color: red;
 			}
+
+			.apply-to-all-button {
+				width: min-content;
+				height: 22px;
+				border-radius: 2px;
+				display: flex;
+				padding: 0px 6px;
+				align-items: center;
+				gap: 3px;
+				background: var(--bg-slate-400);
+			}
 		}
 	}
 
