feat: light-mode styles

--- a/frontend/src/container/NewDashboard/DashboardSettings/DashboardSettings.styles.scss
+++ b/frontend/src/container/NewDashboard/DashboardSettings/DashboardSettings.styles.scss
@@ -123,6 +123,10 @@
 				.edit-variable-button {
 					background: var(--bg-vanilla-300);
 				}
+
+				.apply-to-all-button {
+					background: var(--bg-vanilla-300);
+				}
 			}
 		}
 
