feat: sanitized data storage and removed duplicates

--- a/frontend/src/components/NewSelect/styles.scss
+++ b/frontend/src/components/NewSelect/styles.scss
@@ -396,6 +396,7 @@ $custom-border-color: #2c3044;
 	.select-group {
 		margin-bottom: 12px;
 		overflow: hidden;
+		margin-top: 4px;
 
 		.group-label {
 			font-weight: 500;
