chore: replace y axis unit selector in alerts

--- a/frontend/src/container/FormAlertRules/FormAlertRules.styles.scss
+++ b/frontend/src/container/FormAlertRules/FormAlertRules.styles.scss
@@ -86,6 +86,13 @@
 	}
 }
 
+.y-axis-unit-selector-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 8px;
+}
+
 .detection-method-container {
 	margin: 24px 0;
 
