chore: replace y axis unit selector in dashboards

--- a/frontend/src/container/NewWidget/RightContainer/RightContainer.styles.scss
+++ b/frontend/src/container/NewWidget/RightContainer/RightContainer.styles.scss
@@ -190,7 +190,8 @@
 			text-transform: uppercase;
 		}
 
-		.y-axis-unit-selector {
+		.y-axis-unit-selector,
+		.y-axis-unit-selector-v2 {
 			margin-top: 16px;
 			display: flex;
 			flex-direction: column;
@@ -223,6 +224,21 @@
 				}
 			}
 		}
+
+		.y-axis-unit-selector-v2 {
+			.y-axis-unit-selector-component {
+				.ant-select {
+					width: 100%;
+					border-radius: 2px;
+					background: var(--bg-ink-300);
+
+					.ant-select-selector {
+						border: 1px solid var(--bg-slate-400);
+					}
+				}
+			}
+		}
+
 		.soft-min-max {
 			display: flex;
 			align-items: center;
