feat: modified only/all click behaviour and set all selection always true for dynamic variable

--- a/frontend/src/components/NewSelect/styles.scss
+++ b/frontend/src/components/NewSelect/styles.scss
@@ -475,6 +475,7 @@ $custom-border-color: #2c3044;
 
 			.only-btn:hover {
 				background-color: unset;
+				color: var(--bg-robin-500);
 			}
 			.toggle-btn:hover {
 				background-color: unset;
