--- a/frontend/src/pages/Support/Support.styles.scss
+++ b/frontend/src/pages/Support/Support.styles.scss
@@ -1,10 +1,49 @@
 .support-page-container {
-	color: white;
-	padding-left: 48px;
-	padding-right: 48px;
+	max-height: 100vh;
+	overflow: hidden;
 
-	max-width: 1400px;
-	margin: 64px auto;
+	.support-page-header {
+		border-bottom: 1px solid var(--bg-slate-500);
+		background: rgba(11, 12, 14, 0.7);
+		backdrop-filter: blur(20px);
+
+		.support-page-header-title {
+			color: var(--bg-vanilla-100);
+			text-align: center;
+			font-family: Inter;
+			font-size: 13px;
+			font-style: normal;
+			line-height: 14px;
+			letter-spacing: 0.4px;
+
+			display: flex;
+			align-items: center;
+			gap: 8px;
+			padding: 16px;
+		}
+	}
+
+	.support-page-content {
+		padding: 16px;
+
+		.support-page-content-description {
+			color: var(--bg-vanilla-100);
+			text-align: left;
+			font-family: Inter;
+			font-size: 16px;
+			font-style: normal;
+			line-height: 24px;
+			letter-spacing: 0.4px;
+
+			display: flex;
+			align-items: center;
+			gap: 8px;
+		}
+
+		.support-channels {
+			margin: 24px 0;
+		}
+	}
 }
 
 .support-channels {
@@ -20,6 +59,16 @@
 	min-height: 200px;
 	position: relative;
 	border: none !important;
+
+	border-radius: 4px;
+	border: 1px solid var(--bg-slate-400);
+	background: linear-gradient(
+		139deg,
+		rgba(18, 19, 23, 0.8) 0%,
+		rgba(18, 19, 23, 0.9) 98.68%
+	);
+	box-shadow: 4px 10px 16px 2px rgba(0, 0, 0, 0.2);
+	backdrop-filter: blur(20px);
 
 	.support-channel-title {
 		width: 100%;
@@ -37,6 +86,21 @@
 
 		button {
 			max-width: 100%;
+			padding: 4px 16px;
+
+			.ant-typography {
+				font-size: 11px;
+				font-weight: 400;
+				line-height: 24px;
+				letter-spacing: -0.07px;
+			}
+		}
+
+		.support-channel-btn {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 8px;
 		}
 	}
 }
@@ -47,8 +111,50 @@
 	}
 }
 
-@media screen and (min-width: 1440px) {
+.lightMode {
 	.support-page-container {
-		width: 80%;
+		.support-page-header {
+			border-bottom: 1px solid var(--bg-vanilla-300);
+			background: var(--bg-vanilla-100);
+
+			.support-page-header-title {
+				color: var(--bg-ink-400);
+			}
+		}
+	}
+
+	.support-page-content {
+		.support-page-content-description {
+			color: var(--bg-ink-400);
+		}
+
+		.support-channels {
+			.support-channel {
+				border: 1px solid var(--bg-vanilla-300);
+				background: linear-gradient(
+					139deg,
+					rgba(255, 255, 255, 0.8) 0%,
+					rgba(255, 255, 255, 0.9) 98.68%
+				);
+				box-shadow: 4px 10px 16px 2px rgba(255, 255, 255, 0.2);
+				backdrop-filter: blur(20px);
+			}
+
+			.support-channel-title {
+				color: var(--bg-ink-400);
+			}
+
+			.support-channel-action {
+				button {
+					.ant-typography {
+						color: var(--bg-ink-400);
+					}
+				}
+
+				.support-channel-btn {
+					color: var(--bg-ink-400);
+				}
+			}
+		}
 	}
 }
